--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         3027 Meadowvue Dr. · Pittsburgh, PA 15227 · (412) 860-0168 ·
                         <a href="mailto:name@email.com">rthomas0216@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am currently finishing my degree in Computer Information Systems at Robert Morris University with a strong foundation in IT and data analytics. I’m excited to apply what I’ve learned, take on new challenges, learn new skill, and keep growing as a professional in the tech world.   </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ray-j-thomas/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -63,35 +63,21 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Research Assistant Intern</h3>
+                            <div class="subheading mb-3">UPMC Magee</div>
+                            <p>Worked as part of a research team focused on developing a machine learning model to predict the development of cancer in dense breast tissue using mammogram analysis. My responsibilities included handling, organizing, and preparing medical imaging data for analysis. I regularly used specialized software to apply masks to mammograms and segment image regions.
+
+Additionally, I worked with Python scripts utilizing libraries such as NumPy, OpenCV, and scikit-image to apply image thresholds and enhance visualization. I occasionally modified these scripts to meet specific research requirements and adjust threshold parameters based on image quality and structure.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2024 - December 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Soccer Coach</h3>
+                            <div class="subheading mb-3">Pittsburgh Football Academy</div>
+                            <p>Lead weekly soccer sessions for 15–20 children ages 5 to 15. Plan and explain drills, exercises, and games tailored to different age groups and skill levels. Emphasize teamwork, sportsmanship, and skill development in a fun and structured environment. Serve as a positive mentor, building confidence and engagement through consistent encouragement and personalized feedback. </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
                     </div>
                 </div>
             </section>
