--- a/index.html
+++ b/index.html
@@ -112,18 +112,12 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>                        
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-github"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python" title="Python"></i></li>                        
+                        <li class="list-inline-item"><i class="fab fa-html5" title="HTML5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt" title="CSS3"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square" title="JavaScript"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-github" title="Github"></i></li>
+                       
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
