--- a/index.html
+++ b/index.html
@@ -111,21 +111,74 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                   <ul class="list-inline dev-icons">
-        <li class="list-inline-item"><span title="Python"><i class="fab fa-python"></i></span></li>
-        <li class="list-inline-item"><span title="HTML5"><i class="fab fa-html5"></i></span></li>
-        <li class="list-inline-item"><span title="CSS3"><i class="fab fa-css3-alt"></i></span></li>
-        <li class="list-inline-item"><span title="JavaScript"><i class="fab fa-js-square"></i></span></li>
-        <li class="list-inline-item"><span title="GitHub"><i class="fab fa-github"></i></span></li>
-        <li class="list-inline-item"><span title="SQL / Databases"><i class="fas fa-database"></i></span></li>
-        <li class="list-inline-item"><span title="PowerShell"><i class="fas fa-terminal"></i></span></li>
-        <li class="list-inline-item"><span title="Networking"><i class="fas fa-network-wired"></i></span></li>
-        <li class="list-inline-item"><span title="Windows"><i class="fab fa-windows"></i></span></li>
-        <li class="list-inline-item"><span title="MacOS / Apple"><i class="fab fa-apple"></i></span></li>
-        <li class="list-inline-item"><span title="Project Management"><i class="fas fa-tasks"></i></span></li>
-        <li class="list-inline-item"><span title="Power BI (Symbolic)"><i class="fas fa-chart-bar"></i></span></li>
-        <li class="list-inline-item"><span title="Tableau (Symbolic)"><i class="fas fa-chart-line"></i></span></li>
-    </ul>
+              <ul class="list-inline dev-icons">
+
+  <!-- Programming / Scripting -->
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fab fa-python fa-2x"></i>
+    <div style="font-size: 12px;">Python</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fab fa-html5 fa-2x"></i>
+    <div style="font-size: 12px;">HTML5</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fab fa-css3-alt fa-2x"></i>
+    <div style="font-size: 12px;">CSS3</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fab fa-js-square fa-2x"></i>
+    <div style="font-size: 12px;">JavaScript</div>
+  </li>
+
+  <!-- Data & Visualization -->
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fas fa-database fa-2x"></i>
+    <div style="font-size: 12px;">SQL</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fas fa-chart-bar fa-2x"></i>
+    <div style="font-size: 12px;">Power BI</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fas fa-chart-line fa-2x"></i>
+    <div style="font-size: 12px;">Tableau</div>
+  </li>
+
+  <!-- Dev & Tools -->
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fab fa-github fa-2x"></i>
+    <div style="font-size: 12px;">GitHub</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fas fa-terminal fa-2x"></i>
+    <div style="font-size: 12px;">PowerShell</div>
+  </li>
+
+  <!-- Systems / IT Concepts -->
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fas fa-network-wired fa-2x"></i>
+    <div style="font-size: 12px;">Networking</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fas fa-tasks fa-2x"></i>
+    <div style="font-size: 12px;">Project Mgmt</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fas fa-desktop fa-2x"></i>
+    <div style="font-size: 12px;">Operating Sys</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fab fa-windows fa-2x"></i>
+    <div style="font-size: 12px;">Windows</div>
+  </li>
+  <li class="list-inline-item text-center" style="width: 70px;">
+    <i class="fab fa-apple fa-2x"></i>
+    <div style="font-size: 12px;">MacOS</div>
+  </li>
+
+</ul>
+
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
