--- a/index.html
+++ b/index.html
@@ -113,71 +113,84 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
                     <div class="subheading mb-3">Programming Languages & Tools</div>
               <ul class="list-inline dev-icons">
 
-  <!-- Programming / Scripting -->
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fab fa-python fa-2x"></i>
-    <div style="font-size: 12px;">Python</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fab fa-html5 fa-2x"></i>
-    <div style="font-size: 12px;">HTML5</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fab fa-css3-alt fa-2x"></i>
-    <div style="font-size: 12px;">CSS3</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fab fa-js-square fa-2x"></i>
-    <div style="font-size: 12px;">JavaScript</div>
-  </li>
+<section class="resume-section" id="skills">
+  <div class="resume-section-content">
+    <h2 class="mb-5">Skills</h2>
 
-  <!-- Data & Visualization -->
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fas fa-database fa-2x"></i>
-    <div style="font-size: 12px;">SQL</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fas fa-chart-bar fa-2x"></i>
-    <div style="font-size: 12px;">Power BI</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fas fa-chart-line fa-2x"></i>
-    <div style="font-size: 12px;">Tableau</div>
-  </li>
+    <!-- 🧑‍💻 Programming Languages & Scripting -->
+    <div class="subheading mb-3">Programming Languages & Scripting</div>
+    <ul class="list-inline dev-icons">
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fab fa-python fa-lg"></i>
+        <div style="font-size: 11px;">Python</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fab fa-html5 fa-lg"></i>
+        <div style="font-size: 11px;">HTML5</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fab fa-css3-alt fa-lg"></i>
+        <div style="font-size: 11px;">CSS3</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fab fa-js-square fa-lg"></i>
+        <div style="font-size: 11px;">JavaScript</div>
+      </li>
+    </ul>
 
-  <!-- Dev & Tools -->
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fab fa-github fa-2x"></i>
-    <div style="font-size: 12px;">GitHub</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fas fa-terminal fa-2x"></i>
-    <div style="font-size: 12px;">PowerShell</div>
-  </li>
+    <!-- 📊 Data Tools & Visualization -->
+    <div class="subheading mt-4 mb-3">Data Tools & Visualization</div>
+    <ul class="list-inline dev-icons">
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fas fa-database fa-lg"></i>
+        <div style="font-size: 11px;">SQL</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fas fa-chart-bar fa-lg"></i>
+        <div style="font-size: 11px;">Power BI</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fas fa-chart-line fa-lg"></i>
+        <div style="font-size: 11px;">Tableau</div>
+      </li>
+    </ul>
 
-  <!-- Systems / IT Concepts -->
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fas fa-network-wired fa-2x"></i>
-    <div style="font-size: 12px;">Networking</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fas fa-tasks fa-2x"></i>
-    <div style="font-size: 12px;">Project Mgmt</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fas fa-desktop fa-2x"></i>
-    <div style="font-size: 12px;">Operating Sys</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fab fa-windows fa-2x"></i>
-    <div style="font-size: 12px;">Windows</div>
-  </li>
-  <li class="list-inline-item text-center" style="width: 70px;">
-    <i class="fab fa-apple fa-2x"></i>
-    <div style="font-size: 12px;">MacOS</div>
-  </li>
+    <!-- 🛠 IT Systems & Infrastructure -->
+    <div class="subheading mt-4 mb-3">IT Systems & Infrastructure</div>
+    <ul class="list-inline dev-icons">
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fab fa-github fa-lg"></i>
+        <div style="font-size: 11px;">GitHub</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fas fa-terminal fa-lg"></i>
+        <div style="font-size: 11px;">PowerShell</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fas fa-network-wired fa-lg"></i>
+        <div style="font-size: 11px;">Networking</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fas fa-tasks fa-lg"></i>
+        <div style="font-size: 11px;">Project Mgmt</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fas fa-desktop fa-lg"></i>
+        <div style="font-size: 11px;">Operating Sys</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fab fa-windows fa-lg"></i>
+        <div style="font-size: 11px;">Windows</div>
+      </li>
+      <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
+        <i class="fab fa-apple fa-lg"></i>
+        <div style="font-size: 11px;">MacOS</div>
+      </li>
+    </ul>
 
-</ul>
+  </div>
+</section>
+
 
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
