--- a/index.html
+++ b/index.html
@@ -187,26 +187,29 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
 
 
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
-                </div>
+                   <div class="subheading mb-3">Technical Concepts</div>
+<ul class="fa-ul mb-3">
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
+</ul>
+
+<div class="subheading mb-3 mt-4">Non-Technical Concepts</div>
+<ul class="fa-ul mb-3">
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Process Planning</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
+</ul>
+
+<div class="subheading mb-3 mt-4">Soft Skills</div>
+<ul class="fa-ul mb-0">
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Strong Communication</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
+</ul>
+
             </section>
             <hr class="m-0" />
             <!-- Interests-->
