--- a/index.html
+++ b/index.html
@@ -187,28 +187,43 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
 
 
-                   <div class="subheading mb-3">Technical Concepts</div>
-<ul class="fa-ul mb-3">
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
-</ul>
+               <div class="subheading mb-3">Concepts & Core Skills</div>
+<div class="row">
 
-<div class="subheading mb-3 mt-4">Non-Technical Concepts</div>
-<ul class="fa-ul mb-3">
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Process Planning</li>
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
-</ul>
+  <!-- Technical Concepts -->
+  <div class="col-md-4">
+    <h5 class="text-uppercase" style="font-size: 14px; font-weight: bold;">Technical Concepts</h5>
+    <ul class="fa-ul">
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
+    </ul>
+  </div>
 
-<div class="subheading mb-3 mt-4">Soft Skills</div>
-<ul class="fa-ul mb-0">
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Strong Communication</li>
-  <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
-</ul>
+  <!-- Non-Technical Concepts -->
+  <div class="col-md-4">
+    <h5 class="text-uppercase" style="font-size: 14px; font-weight: bold;">Non-Technical Concepts</h5>
+    <ul class="fa-ul">
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
+    </ul>
+  </div>
+
+  <!-- Soft Skills -->
+  <div class="col-md-4">
+    <h5 class="text-uppercase" style="font-size: 14px; font-weight: bold;">Soft Skills</h5>
+    <ul class="fa-ul">
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
+      <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
+    </ul>
+  </div>
+
+</div>
+
 
             </section>
             <hr class="m-0" />
