--- a/index.html
+++ b/index.html
@@ -188,12 +188,13 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
 
             <!-- Concepts & Core Skills Section -->
-<div class="subheading mb-3 text-uppercase" style="font-weight: bold;">Concepts & Core Skills</div>
-<div class="row" style="margin-top: 20px; gap: 10px;">
+<!-- Concepts & Core Skills Section -->
+<div class="subheading mb-4 text-uppercase" style="font-weight: bold;">Concepts & Core Skills</div>
+<div class="row">
 
   <!-- Technical Concepts -->
-  <div class="col-md-4 mb-4">
-    <h5 style="font-size: 14px; font-weight: bold;">Technical Concepts</h5>
+  <div class="col-md-4">
+    <h5 class="text-uppercase" style="font-size: 14px; font-weight: bold;">Technical Concepts</h5>
     <ul class="fa-ul">
       <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
       <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
@@ -203,8 +204,8 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
   </div>
 
   <!-- Non-Technical Concepts -->
-  <div class="col-md-4 mb-4">
-    <h5 style="font-size: 14px; font-weight: bold;">Non-Technical Concepts</h5>
+  <div class="col-md-4">
+    <h5 class="text-uppercase" style="font-size: 14px; font-weight: bold;">Non-Technical Concepts</h5>
     <ul class="fa-ul">
       <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
       <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
@@ -213,8 +214,8 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
   </div>
 
   <!-- Soft Skills -->
-  <div class="col-md-4 mb-4">
-    <h5 style="font-size: 14px; font-weight: bold;">Soft Skills</h5>
+  <div class="col-md-4">
+    <h5 class="text-uppercase" style="font-size: 14px; font-weight: bold;">Soft Skills</h5>
     <ul class="fa-ul">
       <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
       <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
