--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
             <!-- Concepts & Core Skills Section -->
 <!-- Concepts & Core Skills Section -->
+<div class="container">
 <div class="subheading mb-4 text-uppercase" style="font-weight: bold;">Concepts & Core Skills</div>
 <div class="row">
 
@@ -225,7 +226,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
   </div>
 
 </div>
-
+</div>
 
 
             </section>
