--- a/index.html
+++ b/index.html
@@ -189,44 +189,46 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
             <!-- Concepts & Core Skills Section -->
 <!-- Concepts & Core Skills Section -->
-<div class="container">
-<div class="subheading mb-4 text-uppercase" style="font-weight: bold;">Concepts & Core Skills</div>
-<div class="row">
+<!-- Concepts & Core Skills Section -->
+<div class="container mt-4">
+  <h3 class="text-uppercase mb-4" style="font-weight: bold;">Concepts & Core Skills</h3>
+  <div class="row">
 
-  <!-- Technical Concepts -->
-  <div class="col-md-4">
-    <h5 class="text-uppercase" style="font-size: 14px; font-weight: bold;">Technical Concepts</h5>
-    <ul class="fa-ul">
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
-    </ul>
+    <!-- Technical Concepts -->
+    <div class="col-md-4">
+      <h5 class="text-uppercase" style="font-size: 15px; font-weight: bold;">Technical Concepts</h5>
+      <ul class="fa-ul" style="line-height: 1.8;">
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
+      </ul>
+    </div>
+
+    <!-- Non-Technical Concepts -->
+    <div class="col-md-4">
+      <h5 class="text-uppercase" style="font-size: 15px; font-weight: bold;">Non-Technical Concepts</h5>
+      <ul class="fa-ul" style="line-height: 1.8;">
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
+      </ul>
+    </div>
+
+    <!-- Soft Skills -->
+    <div class="col-md-4">
+      <h5 class="text-uppercase" style="font-size: 15px; font-weight: bold;">Soft Skills</h5>
+      <ul class="fa-ul" style="line-height: 1.8;">
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
+        <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
+      </ul>
+    </div>
+
   </div>
-
-  <!-- Non-Technical Concepts -->
-  <div class="col-md-4">
-    <h5 class="text-uppercase" style="font-size: 14px; font-weight: bold;">Non-Technical Concepts</h5>
-    <ul class="fa-ul">
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
-    </ul>
-  </div>
-
-  <!-- Soft Skills -->
-  <div class="col-md-4">
-    <h5 class="text-uppercase" style="font-size: 14px; font-weight: bold;">Soft Skills</h5>
-    <ul class="fa-ul">
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
-      <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
-    </ul>
-  </div>
-
 </div>
-</div>
+
 
 
             </section>
