--- a/index.html
+++ b/index.html
@@ -190,14 +190,15 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
             <!-- Concepts & Core Skills Section -->
 <!-- Concepts & Core Skills Section -->
 <!-- Concepts & Core Skills Section -->
-<div class="container mt-4">
-  <h3 class="text-uppercase mb-4" style="font-weight: bold;">Concepts & Core Skills</h3>
+<!-- Concepts & Core Skills Section -->
+<div class="container mt-0 mb-5">
+  <h3 class="text-uppercase mb-4" style="font-weight: bold; color: #6c757d;">Concepts & Core Skills</h3>
   <div class="row">
 
     <!-- Technical Concepts -->
     <div class="col-md-4">
-      <h5 class="text-uppercase" style="font-size: 15px; font-weight: bold;">Technical Concepts</h5>
-      <ul class="fa-ul" style="line-height: 1.8;">
+      <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Technical Concepts</h5>
+      <ul class="fa-ul" style="line-height: 1.9;">
         <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
         <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
         <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
@@ -207,8 +208,8 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
     <!-- Non-Technical Concepts -->
     <div class="col-md-4">
-      <h5 class="text-uppercase" style="font-size: 15px; font-weight: bold;">Non-Technical Concepts</h5>
-      <ul class="fa-ul" style="line-height: 1.8;">
+      <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Non-Technical Concepts</h5>
+      <ul class="fa-ul" style="line-height: 1.9;">
         <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
         <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
         <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
@@ -217,8 +218,8 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
     <!-- Soft Skills -->
     <div class="col-md-4">
-      <h5 class="text-uppercase" style="font-size: 15px; font-weight: bold;">Soft Skills</h5>
-      <ul class="fa-ul" style="line-height: 1.8;">
+      <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Soft Skills</h5>
+      <ul class="fa-ul" style="line-height: 1.9;">
         <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
         <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
         <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
