--- a/index.html
+++ b/index.html
@@ -108,11 +108,10 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
             <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
-  <div class="resume-section-content">
+  <div class="resume-section-content container-fluid">
     <h2 class="mb-5">Skills</h2>
-              <ul class="list-inline dev-icons">
 
-    <!-- 🧑‍💻 Programming Languages & Scripting -->
+    <!-- Programming Languages & Scripting (icons stay the same) -->
     <div class="subheading mb-3">Programming Languages & Scripting</div>
     <ul class="list-inline dev-icons">
       <li class="list-inline-item text-center" style="width: 60px; margin: 10px;">
@@ -189,47 +188,49 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
             <!-- Concepts & Core Skills Section -->
 <!-- Concepts & Core Skills Section -->
-<!-- Concepts & Core Skills Section -->
-<!-- Concepts & Core Skills Section -->
-<div class="container mt-0 mb-5">
-  <h3 class="text-uppercase mb-4" style="font-weight: bold; color: #6c757d;">Concepts & Core Skills</h3>
-  <div class="row">
 
-    <!-- Technical Concepts -->
-    <div class="col-md-4">
-      <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Technical Concepts</h5>
-      <ul class="fa-ul" style="line-height: 1.9;">
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
-      </ul>
-    </div>
 
-    <!-- Non-Technical Concepts -->
-    <div class="col-md-4">
-      <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Non-Technical Concepts</h5>
-      <ul class="fa-ul" style="line-height: 1.9;">
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
-      </ul>
-    </div>
+    <!-- Concepts Section -->
+    <div class="bg-light p-4 rounded shadow-sm mt-5">
+      <h3 class="text-uppercase mb-4" style="font-weight: bold; color: #6c757d;">Concepts & Core Skills</h3>
+      <div class="row">
 
-    <!-- Soft Skills -->
-    <div class="col-md-4">
-      <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Soft Skills</h5>
-      <ul class="fa-ul" style="line-height: 1.9;">
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
-        <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
-      </ul>
+        <!-- Technical Concepts -->
+        <div class="col-md-4 mb-4">
+          <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Technical Concepts</h5>
+          <ul class="fa-ul" style="line-height: 2;">
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
+          </ul>
+        </div>
+
+        <!-- Non-Technical Concepts -->
+        <div class="col-md-4 mb-4">
+          <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Non-Technical Concepts</h5>
+          <ul class="fa-ul" style="line-height: 2;">
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
+          </ul>
+        </div>
+
+        <!-- Soft Skills -->
+        <div class="col-md-4 mb-4">
+          <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Soft Skills</h5>
+          <ul class="fa-ul" style="line-height: 2;">
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
+            <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
+          </ul>
+        </div>
+
+      </div>
     </div>
 
   </div>
-</div>
-
 
 
             </section>
