--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#concepts">Concepts</a></li>                    
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
@@ -185,55 +186,48 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
   </div>
 
 
-
-            <!-- Concepts & Core Skills Section -->
-<!-- Concepts & Core Skills Section -->
-
-
-    <!-- Concepts Section -->
-    <div class="bg-light p-4 rounded shadow-sm mt-5">
-      <h3 class="text-uppercase mb-4" style="font-weight: bold; color: #6c757d;">Concepts & Core Skills</h3>
-      <div class="row">
-
-        <!-- Technical Concepts -->
-        <div class="col-md-4 mb-4">
-          <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Technical Concepts</h5>
-          <ul class="fa-ul" style="line-height: 2;">
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
-          </ul>
-        </div>
-
-        <!-- Non-Technical Concepts -->
-        <div class="col-md-4 mb-4">
-          <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Non-Technical Concepts</h5>
-          <ul class="fa-ul" style="line-height: 2;">
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
-          </ul>
-        </div>
-
-        <!-- Soft Skills -->
-        <div class="col-md-4 mb-4">
-          <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Soft Skills</h5>
-          <ul class="fa-ul" style="line-height: 2;">
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
-            <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
-          </ul>
-        </div>
-
-      </div>
-    </div>
-
-  </div>
-
-
             </section>
+     <section class="resume-section" id="concepts">
+  <div class="resume-section-content">
+    <h2 class="mb-5">Concepts & Core Skills</h2>
+    <div class="row">
+
+      <!-- Technical Concepts -->
+      <div class="col-md-4 mb-4">
+        <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Technical Concepts</h5>
+        <ul class="fa-ul" style="line-height: 1.9;">
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
+        </ul>
+      </div>
+
+      <!-- Non-Technical Concepts -->
+      <div class="col-md-4 mb-4">
+        <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Non-Technical Concepts</h5>
+        <ul class="fa-ul" style="line-height: 1.9;">
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Documentation & Planning</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
+        </ul>
+      </div>
+
+      <!-- Soft Skills -->
+      <div class="col-md-4 mb-4">
+        <h5 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Soft Skills</h5>
+        <ul class="fa-ul" style="line-height: 1.9;">
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Team Collaboration</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+</section>
+
             <hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="interests">
