--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
   </div>
 
-
+            </section>
         <section class="resume-section" id="concepts">
   <div class="resume-section-content">
     <h2 class="mb-5">Concepts & Core Skills</h2>
