--- a/index.html
+++ b/index.html
@@ -193,32 +193,32 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
       <!-- Data & Analytics -->
       <div class="col-md-4 mb-4">
-        <h4 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Data & Analytics</h4>
+        <h3 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Data & Analytics</h3>
         <ul class="fa-ul" style="line-height: 1.9;">
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Cleaning & Transformation</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Visualization Principles</li>          
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Analytics with Python</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Machine Learning Fundamentals</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>SQL Query Design & Optimization/li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Medical Imaging Analysis</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Visualization Principles</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>SQL Query Design & Optimization</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Machine Learning Fundamentals</li>
         </ul>
       </div>
 
       <!-- IT & Systems -->
       <div class="col-md-4 mb-4">
-        <h4 class="text-uppercase" style="font-size: 16px; font-weight: bold;">IT & Systems</h4>
+        <h3 class="text-uppercase" style="font-size: 16px; font-weight: bold;">IT & Systems</h3>
         <ul class="fa-ul" style="line-height: 1.9;">
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking Fundamentals</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking and Security Fundamentals</li>
         </ul>
       </div>
 
       <!-- Professional Skills -->
       <div class="col-md-4 mb-4">
-        <h4 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Professional Skills</h4>
+        <h class="text-uppercase" style="font-size: 16px; font-weight: bold;">Professional Skills</h>
         <ul class="fa-ul" style="line-height: 1.9;">
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Time & Task Management</li>
