concept header size

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
       <!-- Data & Analytics -->
       <div class="col-md-4 mb-4">
-        <h3 class="text-uppercase" style="font-size: 16px; font-weight: bold;">Data & Analytics</h3>
+        <h5 class="text-uppercase" style="font-size: 20px; font-weight: bold;">Data & Analytics</h5>
         <ul class="fa-ul" style="line-height: 1.9;">
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Cleaning & Transformation</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Visualization Principles</li>          
@@ -206,7 +206,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
       <!-- IT & Systems -->
       <div class="col-md-4 mb-4">
-        <h3 class="text-uppercase" style="font-size: 16px; font-weight: bold;">IT & Systems</h3>
+        <h5 class="text-uppercase" style="font-size: 20px; font-weight: bold;">IT & Systems</h5>
         <ul class="fa-ul" style="line-height: 1.9;">
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Troubleshooting & Debugging</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Technical Support Practices</li>
@@ -218,7 +218,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
       <!-- Professional Skills -->
       <div class="col-md-4 mb-4">
-        <h class="text-uppercase" style="font-size: 16px; font-weight: bold;">Professional Skills</h>
+        <h5 class="text-uppercase" style="font-size: 20px; font-weight: bold;">Professional Skills</h5>
         <ul class="fa-ul" style="line-height: 1.9;">
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Project Management</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Time & Task Management</li>
