--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from studying IT and data anlytics, I enjoy being active and exercising. I play in multiple soccer leagues, reguraly go to the gym, and enjoy running. In the winter, I avidly ski and snowboard.</p>
+                    <p class="mb-0">When forced indoors, I enjoy playing the gutair and learning new songs. I take interest in learning new things and usally find things to fix or build, especially around my house. and I spend a large amount of my free time exploring the latest technology advancements in the IT and data analytics. If I am just relaxing I enjoy watching different si-fi movies and television shows.</p>
                 </div>
             </section>
             <hr class="m-0" />
