--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         3027 Meadowvue Dr. · Pittsburgh, PA 15227 · (412) 860-0168 ·
                         <a href="mailto:name@email.com">rthomas0216@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am currently finishing my degree in Computer Information Systems at Robert Morris University with a strong foundation in IT and data analytics. I’m excited to apply what I’ve learned, take on new challenges, learn new skill, and keep growing as a professional in the tech world.   </p>
+                    <p class="lead mb-5">I am currently completing my degree in Computer Information Systems at Robert Morris University with a strong foundation in IT and data analytics. I’m excited to apply what I’ve learned, take on new challenges, learn new skill, and keep growing as a professional in the tech world.   </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ray-j-thomas/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -92,7 +92,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
                             <h3 class="mb-0">Robert Morris University</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Computer Information Systems</div>
-                            <p>Major GPA: 3.4</p>
+                            <div>Completed credits equvalant to a buisness minor</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Graduate May 2025</span></div>
                     </div>
@@ -100,7 +100,6 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Baldwin-Whitehall Senior Highschool</h3>
                             <div class="subheading mb-3">Highschool Diploma</div>
-                            <p>GPA: 3.7</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Graduated June 2020</span></div>
                     </div>
@@ -229,6 +228,16 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
         </ul>
       </div>
 
+      <div class="col-md-4 mb-4">
+        <h5 class="text-uppercase" style="font-size: 20px; font-weight: bold;">Buisness Skills</h5>
+        <ul class="fa-ul" style="line-height: 1.9;">
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Accounting</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Statistics</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Economics</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Finance</li>
+        </ul>
+      </div>
+
     </div>
   </div>
 </section>
@@ -240,7 +249,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from studying IT and data analytics, I enjoy staying active and exercising. I play in multiple soccer leagues, regularly go to the gym, and enjoy running. In the winter, I avidly ski and snowboard.</p>
-                    <p class="mb-0">When I’m indoors, I enjoy playing guitar and learning new songs. I’m always interested in learning new things and often find projects to fix or build, especially around the house. I also spend a lot of my free time exploring the latest advancements in IT and data analytics. When it’s time to relax, I enjoy watching sci-fi movies and television shows.</p>
+                    <p class="mb-0">When I’m indoors, I enjoy playing guitar and learning new songs. I’m always interested in learning new things and often find projects to fix or build, especially around the house. I also spend some of my free time exploring the latest advancements in IT and data analytics. When it’s time to relax, I enjoy watching sci-fi movies and television shows.</p>
                 </div>
             </section>
             <hr class="m-0" />
