--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Clarence Taylor</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile.png" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="myprofile.png" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -92,7 +92,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
                             <h3 class="mb-0">Robert Morris University</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Computer Information Systems</div>
-                            <div>Completed credits equvalant to a buisness minor</div>
+                            <div>Completed credits equivalent to a buisness minor</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Graduate May 2025</span></div>
                     </div>
@@ -197,7 +197,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Cleaning & Transformation</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Data Visualization Principles</li>          
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Analytics with Python</li>
-          <li><span class="fa-li"><i class="fas fa-check"></i></span>SQL Query Design & Optimization/li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>SQL Query Design & Optimization</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Medical Imaging Analysis</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Machine Learning Fundamentals</li>
         </ul>
@@ -225,6 +225,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Communication</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Leadership & Mentoring</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Adaptability & Problem Solving</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Cyber Law</li>
         </ul>
       </div>
 
@@ -235,6 +236,8 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Statistics</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Economics</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Finance</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Buisness Law</li>
+
         </ul>
       </div>
 
