--- a/index.html
+++ b/index.html
@@ -320,20 +320,18 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
                             Google Analytics Certified Developer
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
                             Data Analytics Bootcamp
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
                             CompTIA A+ (In-Progress)
                         </li>
                     </ul>
