--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
                     </ul>
                 </div>
             </section>                 
-
+<hr class="m-0" />   
             <!-- Involvment and Leadership-->
            <section class="resume-section" id="involvement">
   <div class="resume-section-content">
@@ -419,7 +419,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
 
   </div>
 </section>
-
+<hr class="m-0" />   
         <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
