--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
       <!-- Add more blocks as needed -->
   <!-- Certification 2 -->
       <div class="col-md-6 mb-4 text-center">
-        <img src="assets/Data Analytics Bootcamp Certification of Completion.png" alt="DA Bootcamp" class="img-fluid mb-2 rounded shadow-sm" style="max-height: 300px;">
+        <img src="assets/img/DAbootcamp.png" alt="DA Bootcamp" class="img-fluid mb-2 rounded shadow-sm" style="max-height: 300px;">
         <h5>Data Analyst Bootcamp</h5>
       </div>
 
