--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
     </div>
   </div>
 </section>
- 
+ <hr class="m-0" />   
             <!-- Involvment and Leadership-->
            <section class="resume-section" id="involvement">
   <div class="resume-section-content">
