--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
       <div class="col-md-6 mb-4">
         <div class="card h-100 shadow-sm">
           <div class="card-body">
-            <h5 class="card-title">SQL Sales Analysis</h5>
-            <p class="card-text">Analyzed sales data using SQL to uncover trends in customer purchases. Used joins, CTEs, and window functions to create a clean summary report.</p>
+            <h5 class="card-title">SQL Food Habit Analysis</h5>
+            <p class="card-text">Analyzed students food habits using SQL to uncover trends. Used joins, CTEs, and subqueries to create a clean summary report.</p>
             <p><strong>Tools:</strong> SQL, PostgreSQL, Excel</p>
-            <a href="https://github.com/yourusername/sql-project" class="btn btn-primary btn-sm" target="_blank">View Code</a>
+            <a href="https://github.com/Raymond-Thomas/SQL-Students-Eating-Habits-Cleaned" class="btn btn-primary btn-sm" target="_blank">View Code</a>
           </div>
         </div>
       </div>
