--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
             <p class="card-text">Analyzed students food habits using SQL to uncover trends. Used joins, CTEs, and subqueries to create a clean summary report.</p>
             <p><strong>Tools:</strong> SQL </p>
             <a href="https://github.com/Raymond-Thomas/SQL-Students-Eating-Habits-Cleaned" class="btn btn-primary btn-sm" target="_blank">View Code</a>
-            <a href="https://github.com/Raymond-Thomas/SQL-Students-Eating-Habits-Cleaned" class="btn btn-primary btn-sm" target="_blank">View Code</a>
+            <!-- <a href="https://github.com/Raymond-Thomas/SQL-Students-Eating-Habits-Cleaned" class="btn btn-primary btn-sm" target="_blank">View Code</a> -->
           </div>
         </div>
       </div>
 
-      <!-- Project 2: UPMC Research -->
-      <div class="col-md-6 mb-4">
-        <div class="card h-100 shadow-sm">
+    <!-- Project 2: UPMC Research -->
+      <!-- <div class="col-md-6 mb-4">
+         <div class="card h-100 shadow-sm">
           <div class="card-body">
             <h5 class="card-title">Medical Imaging ML Research</h5>
             <p class="card-text">Worked with UPMC Magee Radiology to segment and analyze mammogram images. Applied image thresholds using Python libraries like NumPy and scikit-image.</p>
@@ -195,9 +195,9 @@
           </div>
         </div>
       </div>
-
+-->
       <!-- Project 3: Absence Tracker -->
-      <div class="col-md-6 mb-4">
+    <div class="col-md-6 mb-4">
         <div class="card h-100 shadow-sm">
           <div class="card-body">
             <h5 class="card-title">Absence Tracker Tool</h5>
@@ -208,8 +208,8 @@
         </div>
       </div>
 
-      <!-- Project 4: Power BI Dashboard -->
-      <div class="col-md-6 mb-4">
+   <!-- Project 4: Power BI Dashboard -->
+   <!--    <div class="col-md-6 mb-4">
         <div class="card h-100 shadow-sm">
           <div class="card-body">
             <h5 class="card-title">Sales Performance Dashboard</h5>
@@ -219,7 +219,7 @@
           </div>
         </div>
       </div>
-
+-->
     </div>
   </div>
 </section>
