Add python project

--- a/index.html
+++ b/index.html
@@ -209,17 +209,17 @@
       </div>
 
    <!-- Project 4: Power BI Dashboard -->
-   <!--    <div class="col-md-6 mb-4">
+       <div class="col-md-6 mb-4">
         <div class="card h-100 shadow-sm">
           <div class="card-body">
-            <h5 class="card-title">Sales Performance Dashboard</h5>
-            <p class="card-text">Created an interactive dashboard in Power BI to visualize KPIs, regional trends, and monthly sales comparisons for a fictional company.</p>
-            <p><strong>Tools:</strong> Power BI, Excel</p>
+            <h5 class="card-title">Python Web Scraping</h5>
+            <p class="card-text">Wrote a Python script to extract and organize data from a Wikipedia page</p>
+            <p><strong>Tools:</strong> Python, BeautifulSoup, Pandas</p>
             <a href="#" class="btn btn-secondary btn-sm" target="_blank">View Report</a>
           </div>
         </div>
       </div>
--->
+
     </div>
   </div>
 </section>
