Update python project

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <h5 class="card-title">Python Web Scraping</h5>
             <p class="card-text">Wrote a Python script to extract and organize data from a Wikipedia page</p>
             <p><strong>Tools:</strong> Python, BeautifulSoup, Pandas</p>
-            <a href="https://github.com/Raymond-Thomas/Wiki-Web-Scraping-Project/blob/main/Python-Web-Scraping-Project.py" class="btn btn-secondary btn-sm" target="_blank">View Report</a>
+            <a href="https://github.com/Raymond-Thomas/Wiki-Web-Scraping-Project/blob/main/Python-Web-Scraping-Project.py" class="btn btn-secondary btn-sm" target="_blank">View Code</a>
           </div>
         </div>
       </div>
