--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ondary<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -178,7 +178,7 @@
             <h5 class="card-title">SQL Food Habit Analysis</h5>
             <p class="card-text">Analyzed students food habits using SQL to uncover trends. Used joins, CTEs, and subqueries to create a clean summary report.</p>
             <p><strong>Tools:</strong> SQL </p>
-            <a href="https://github.com/Raymond-Thomas/SQL-Students-Eating-Habits-Cleaned" class="btn btn-primary btn-sm" target="_blank">View Code</a>
+            <a href="https://github.com/Raymond-Thomas/SQL-Students-Eating-Habits-Cleaned" class="btn btn-secondary btn-sm" target="_blank">View Code</a>
             <!-- <a href="https://github.com/Raymond-Thomas/SQL-Students-Eating-Habits-Cleaned" class="btn btn-primary btn-sm" target="_blank">View Code</a> -->
           </div>
         </div>
