Added volunteer work

--- a/index.html
+++ b/index.html
@@ -369,6 +369,16 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
       <div class="flex-shrink-0"><span class="text-primary">2022 – Present</span></div>
     </div>
 
+    <!-- Item 3 -->
+    <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
+      <div class="flex-grow-1">
+        <h4 class="mb-0">BHS Mini-THON</h4>
+        <div class="subheading mb-2">Volunteered</div>
+        <p>Volunteered at my high school’s Mini-THON to support childhood cancer fundraising through event planning and community engagement.</p>
+      </div>
+      <div class="flex-shrink-0"><span class="text-primary">2022 – Present</span></div>
+    </div>
+
     <!-- Add more entries here as needed -->
 
   </div>
