--- a/index.html
+++ b/index.html
@@ -184,18 +184,18 @@
         </div>
       </div>
 
-    <!-- Project 2: UPMC Research -->
-      <!-- <div class="col-md-6 mb-4">
+    <!-- Project 2: Azure Absence Tracker -->
+    <div class="col-md-6 mb-4">
          <div class="card h-100 shadow-sm">
           <div class="card-body">
-            <h5 class="card-title">Medical Imaging ML Research</h5>
-            <p class="card-text">Worked with UPMC Magee Radiology to segment and analyze mammogram images. Applied image thresholds using Python libraries like NumPy and scikit-image.</p>
-            <p><strong>Tools:</strong> Python, OpenCV, Seg3D</p>
-            <a href="#" class="btn btn-secondary btn-sm" target="_blank">Read More</a>
+            <h5 class="card-title">Azure Absence Tracker Web App</h5>
+            <p class="card-text">A simple Flask-based web application that allows users to submit absence requests via a styled HTML form. The project was built as part of my portfolio to demonstrate knowlage in working with Azure basics and Github Intergration</p>
+            <p><strong>Tools:</strong> Azure, Python, Github, Git</p>
+            <a href="https://github.com/Raymond-Thomas/absence-tracker" class="btn btn-secondary btn-sm" target="_blank">View Project</a>
           </div>
         </div>
       </div>
--->
+
       <!-- Project 3: Absence Tracker -->
     <div class="col-md-6 mb-4">
         <div class="card h-100 shadow-sm">
@@ -279,6 +279,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
           <li><span class="fa-li"><i class="fas fa-check"></i></span>System Analysis & Design</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Command Line Interface (CLI)</li>
           <li><span class="fa-li"><i class="fas fa-check"></i></span>Networking and Security Fundamentals</li>
+          <li><span class="fa-li"><i class="fas fa-check"></i></span>Cloud Computing - Azure</li>
         </ul>
       </div>
 
