--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ Additionally, I worked with Python scripts utilizing libraries such as NumPy, Op
         <div class="subheading mb-2">Volunteered</div>
         <p>Volunteered at my high school’s Mini-THON to support childhood cancer fundraising through event planning and community engagement.</p>
       </div>
-      <div class="flex-shrink-0"><span class="text-primary">2022 – Present</span></div>
+      <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
     </div>
 
     <!-- Add more entries here as needed -->
