--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
     <div class="col-md-6 mb-4">
         <div class="card h-100 shadow-sm">
           <div class="card-body">
-            <h5 class="card-title">Absence Tracker Tool</h5>
-            <p class="card-text">Built a color-coded absence tracker using Excel with formulas and conditional formatting. Designed for teams and classrooms to manage attendance.</p>
+            <h5 class="card-title">Pharmacy Data Cleaning & Access Reporting Project</h5>
+            <p class="card-text">Cleaned and structured pharmacy patient and medication data in Excel and Access to support relational database management and reporting.</p>
             <p><strong>Tools:</strong> Excel, VBA (basic), Google Sheets</p>
-            <a href="https://docs.google.com/spreadsheets/d/1BNf_59jVffYY8azqkydiVnLWpjiHbL_GJBLEzKeXyLI/edit?usp=sharing" class="btn btn-secondary btn-sm" target="_blank">View Tracker</a>
+            <a href="https://github.com/Raymond-Thomas/pharma-data-cleaning-access/tree/main" class="btn btn-secondary btn-sm" target="_blank">View Tracker</a>
           </div>
         </div>
       </div>
